# matrix-multiplication-investigation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  matrix-multiplication-ci.yml
include/: matrix.h  matrix_multiply_baseline.h  utils.h
src/: main.cpp  matrix_multiply_baseline.cpp  utils.cpp
test/: test_main.cpp
